Fixing wearable slider styling in new version.
[Issue] #704
[Problem] Some styling doesn't fits documentation
[Solution] Changing it.

--- a/src/css/profile/wearable/changeable/theme-circle/circleprogressbar.less
+++ b/src/css/profile/wearable/changeable/theme-circle/circleprogressbar.less
@@ -34,7 +34,7 @@
 		z-index: 1000;
 		width: 20px;
 		height: 20px;
-		background: rgba(55,161,237,1);
+		background: rgba(0, 140, 255, 1);
 		border-radius: 50%;
 		left: 180px;
 		top: 180px;
@@ -46,7 +46,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
-			background: rgba(55, 161, 237, 0.5);
+			background: rgba(0, 140, 255, 0.5);
 			left: 0;
 			right: 0;
 			border-radius: 50%;
@@ -62,7 +62,7 @@
 
 		&-pressed::after {
 			content: "";
-			transform: scale(2);
+			transform: scale(2.8);
 		}
 	}
 }
